// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`planConfigFiles > package.json snapshots per (packageManager, target) > matches snapshot for 'npm' + 'clickhouse' 1`] = `
"{
  "name": "proj",
  "version": "0.0.1",
  "type": "module",
  "private": true,
  "scripts": {
    "dev": "tsx src/index.ts",
    "start": "tsx src/index.ts",
    "build": "tsup src/index.ts --format esm --dts",
    "lint": "biome check . --write"
  },
  "dependencies": {
    "@clickhouse/client": "^1.14.0",
    "@subsquid/evm-abi": "0.3.1",
    "@subsquid/evm-codec": "0.3.0",
    "@subsquid/pipes": "^1.0.0-beta.1",
    "better-sqlite3": "^12.4.5",
    "dotenv": "^16.4.5",
    "zod": "^4.3.4"
  },
  "devDependencies": {
    "@biomejs/biome": "^2.3.4",
    "@types/node": "^22.14.1",
    "tsup": "^8.5.0",
    "tsx": "^4.20.6",
    "typescript": "^5.9.2"
  }
}"
`;

exports[`planConfigFiles > package.json snapshots per (packageManager, target) > matches snapshot for 'pnpm' + 'clickhouse' 1`] = `
"{
  "name": "proj",
  "version": "0.0.1",
  "type": "module",
  "private": true,
  "scripts": {
    "dev": "tsx src/index.ts",
    "start": "tsx src/index.ts",
    "build": "tsup src/index.ts --format esm --dts",
    "lint": "biome check . --write"
  },
  "dependencies": {
    "@clickhouse/client": "^1.14.0",
    "@subsquid/evm-abi": "0.3.1",
    "@subsquid/evm-codec": "0.3.0",
    "@subsquid/pipes": "^1.0.0-beta.1",
    "better-sqlite3": "^12.4.5",
    "dotenv": "^16.4.5",
    "zod": "^4.3.4"
  },
  "devDependencies": {
    "@biomejs/biome": "^2.3.4",
    "@types/node": "^22.14.1",
    "tsup": "^8.5.0",
    "tsx": "^4.20.6",
    "typescript": "^5.9.2"
  }
}"
`;

exports[`planConfigFiles > package.json snapshots per (packageManager, target) > matches snapshot for 'pnpm' + 'postgresql' 1`] = `
"{
  "name": "proj",
  "version": "0.0.1",
  "type": "module",
  "private": true,
  "scripts": {
    "dev": "tsx src/index.ts",
    "start": "tsx src/index.ts",
    "build": "tsup src/index.ts --format esm --dts",
    "lint": "biome check . --write",
    "db:generate": "drizzle-kit generate",
    "db:migrate": "drizzle-kit migrate",
    "db:push": "drizzle-kit push"
  },
  "dependencies": {
    "@subsquid/evm-abi": "0.3.1",
    "@subsquid/evm-codec": "0.3.0",
    "@subsquid/pipes": "^1.0.0-beta.1",
    "better-sqlite3": "^12.4.5",
    "dotenv": "^16.4.5",
    "drizzle-kit": "^0.30.0",
    "drizzle-orm": "^0.44.7",
    "pg": "^8.16.3",
    "zod": "^4.3.4"
  },
  "devDependencies": {
    "@biomejs/biome": "^2.3.4",
    "@types/node": "^22.14.1",
    "tsup": "^8.5.0",
    "tsx": "^4.20.6",
    "typescript": "^5.9.2"
  }
}"
`;

exports[`planConfigFiles > src/utils/index.ts snapshots per (networkType, target) > matches snapshot for 'evm' + 'clickhouse' 1`] = `
"export type SnakeCase<S extends string> =
  S extends \`\${infer H}\${infer T}\`
    ? \`\${H extends Lowercase<H> ? H : \`_\${Lowercase<H>}\`}\${SnakeCase<T>}\`
    : S

export type SnakeTopKeys<T> =
  T extends object
    ? { [K in keyof T as K extends string ? SnakeCase<K> : K]: T[K] }
    : T

export const toSnakeCaseKeys = <T extends Record<string, any>>(obj: T): SnakeTopKeys<T> => {
  const toSnake = (k: string) => k.replace(/[A-Z]/g, (m) => \`_\${m.toLowerCase()}\`)
  return Object.fromEntries(Object.entries(obj).map(([k, v]) => [toSnake(k), v])) as SnakeTopKeys<T>
}

export const toSnakeCaseKeysArray = <T extends Record<string, any>>(
  obj: T[],
): SnakeTopKeys<T>[] => {
  return obj.map((o) => toSnakeCaseKeys(o))
}

export function serializeJsonWithBigInt(obj: unknown): string {
  return JSON.stringify(obj, (_key, value) =>
    typeof value === 'bigint' ? value.toString() : value,
  )
}


import { type EventResponse, Events } from '@subsquid/pipes/evm'

export type ExtendEventResponse<ER extends EventResponse<Events, string[]>, Extra extends object> = {
  [K in keyof ER]: ER[K] extends Array<infer E> ? Array<E & Extra> : never
}

export interface EnrichedEventMeta {
  blockNumber: number
  txHash: string
  logIndex: number
  timestamp: number // unix seconds
  contractAddress: string
}

export function enrichEvents<T extends EventResponse<Events, string[]>>(obj: T): ExtendEventResponse<T, EnrichedEventMeta> {
  const result = {} as ExtendEventResponse<T, EnrichedEventMeta>

  for (const key in obj) {
    const value = obj[key]
    result[key] = (value as any[]).map((v) => ({
      ...v.event,
      blockNumber: v.block.number,
      txHash: v.rawEvent.transactionHash,
      logIndex: v.rawEvent.logIndex,
      timestamp: new Date(v.timestamp).getTime() / 1000,
      contractAddress: v.contract,
    })) as ExtendEventResponse<T, EnrichedEventMeta>[typeof key]
  }

  return result
}
"
`;

exports[`planConfigFiles > src/utils/index.ts snapshots per (networkType, target) > matches snapshot for 'evm' + 'postgresql' 1`] = `
"
import { type EventResponse, Events } from '@subsquid/pipes/evm'

export type ExtendEventResponse<ER extends EventResponse<Events, string[]>, Extra extends object> = {
  [K in keyof ER]: ER[K] extends Array<infer E> ? Array<E & Extra> : never
}

export interface EnrichedEventMeta {
  blockNumber: number
  txHash: string
  logIndex: number
  timestamp: number // unix seconds
  contractAddress: string
}

export function enrichEvents<T extends EventResponse<Events, string[]>>(obj: T): ExtendEventResponse<T, EnrichedEventMeta> {
  const result = {} as ExtendEventResponse<T, EnrichedEventMeta>

  for (const key in obj) {
    const value = obj[key]
    result[key] = (value as any[]).map((v) => ({
      ...v.event,
      blockNumber: v.block.number,
      txHash: v.rawEvent.transactionHash,
      logIndex: v.rawEvent.logIndex,
      timestamp: new Date(v.timestamp).getTime() / 1000,
      contractAddress: v.contract,
    })) as ExtendEventResponse<T, EnrichedEventMeta>[typeof key]
  }

  return result
}
"
`;

exports[`planConfigFiles > src/utils/index.ts snapshots per (networkType, target) > matches snapshot for 'svm' + 'clickhouse' 1`] = `
"export type SnakeCase<S extends string> =
  S extends \`\${infer H}\${infer T}\`
    ? \`\${H extends Lowercase<H> ? H : \`_\${Lowercase<H>}\`}\${SnakeCase<T>}\`
    : S

export type SnakeTopKeys<T> =
  T extends object
    ? { [K in keyof T as K extends string ? SnakeCase<K> : K]: T[K] }
    : T

export const toSnakeCaseKeys = <T extends Record<string, any>>(obj: T): SnakeTopKeys<T> => {
  const toSnake = (k: string) => k.replace(/[A-Z]/g, (m) => \`_\${m.toLowerCase()}\`)
  return Object.fromEntries(Object.entries(obj).map(([k, v]) => [toSnake(k), v])) as SnakeTopKeys<T>
}

export const toSnakeCaseKeysArray = <T extends Record<string, any>>(
  obj: T[],
): SnakeTopKeys<T>[] => {
  return obj.map((o) => toSnakeCaseKeys(o))
}

export function serializeJsonWithBigInt(obj: unknown): string {
  return JSON.stringify(obj, (_key, value) =>
    typeof value === 'bigint' ? value.toString() : value,
  )
}


import type { DecodedInstruction, EventResponse, Instructions } from '@subsquid/pipes/solana'

export type ExtendEventResponse<ER extends EventResponse<Instructions>, Extra extends object> = {
  [K in keyof ER]: ER[K] extends Array<infer E> ? Array<E & Extra> : never
}

export interface EnrichedSvmEventMeta {
  blockNumber: number
  transactionIndex: number
  instructionAddress: string
  programId: string
  timestamp: number // unix seconds
}

export function enrichEvents<T extends EventResponse<Instructions>>(
  obj: T,
): ExtendEventResponse<T, EnrichedSvmEventMeta> {
  const result = {} as ExtendEventResponse<T, EnrichedSvmEventMeta>

  for (const key in obj) {
    const value = obj[key]
    result[key] = (value as DecodedInstruction<{ data: object; accounts: object }>[]).map((v) => ({
      ...v.instruction.data,
      ...v.instruction.accounts,
      blockNumber: v.blockNumber,
      programId: v.rawInstruction.programId,
      transactionIndex: v.transaction.transactionIndex,
      instructionAddress: v.rawInstruction.instructionAddress.join('.'),
      timestamp: new Date(v.timestamp).getTime() / 1000,
    })) as any
  }

  return result
}
"
`;
